--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <div class="navWrap">
       <a class="brand" href="/">
         <span class="brandDot"></span>
-        <span>RiskLens</span>
+        <span>LoanRiskLens</span>
       </a>
 
       <div class="navlinks">
@@ -38,3 +38,4 @@
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
+
